--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/express-session": "^1.17.10",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.16",
