--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rxjs": "^7.8.1",
     "sinon": "^17.0.1",
     "typeorm": "^0.3.19",
+    "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -62,6 +63,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/sinon": "^17.0.2",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
